# wasm32-wasi-playground

./: .gitignore  README.md  config.json  unit-wasi.diff  wasm-wasi-http.diff
application/: Cargo.toml  app-component.wasm  wasi_snapshot_preview1.reactor.wasm
application/src/: lib.rs
applicationWasmtime17/: Cargo.toml  wasi_snapshot_preview1.reactor.wasm
applicationWasmtime17/src/: lib.rs
learning/: Cargo.toml
learning/src/: main.rs
